[gd_scene load_steps=23 format=3 uid="uid://ccmoo6ivwuk2g"]

[ext_resource type="Script" path="res://script/Enemy/blackFire.gd" id="1_4na8y"]
[ext_resource type="Shader" path="res://art/Shader/Dark.gdshader" id="2_aaotn"]
[ext_resource type="Texture2D" uid="uid://do3ffcjo1ikvc" path="res://art/Effects/Particle/42.png" id="3_1fi1v"]
[ext_resource type="AudioStream" uid="uid://ceax1qvbmcdpq" path="res://art/Music and Sounds/fireBall.mp3" id="5_7okw3"]
[ext_resource type="PackedScene" uid="uid://dpg8igdyy7wcb" path="res://scenes/Box/New/hitBox.tscn" id="5_y3mio"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dqxsn"]
shader = ExtResource("2_aaotn")

[sub_resource type="AtlasTexture" id="AtlasTexture_qmpxa"]
atlas = ExtResource("3_1fi1v")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_in6nr"]
atlas = ExtResource("3_1fi1v")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hppr"]
atlas = ExtResource("3_1fi1v")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs5gf"]
atlas = ExtResource("3_1fi1v")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_drr06"]
atlas = ExtResource("3_1fi1v")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcb61"]
atlas = ExtResource("3_1fi1v")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oq8dr"]
atlas = ExtResource("3_1fi1v")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3ief"]
atlas = ExtResource("3_1fi1v")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kfv8"]
atlas = ExtResource("3_1fi1v")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5gil"]
atlas = ExtResource("3_1fi1v")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sg3iv"]
atlas = ExtResource("3_1fi1v")
region = Rect2(128, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ni7iw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmpxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_in6nr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hppr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs5gf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drr06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcb61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oq8dr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3ief")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kfv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5gil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sg3iv")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_xwkdq"]
radius = 2.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ac2j7"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fxljv"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_n7yth"]
radius = 3.0

[node name="BlackFire" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 17
script = ExtResource("1_4na8y")
speed = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_dqxsn")
sprite_frames = SubResource("SpriteFrames_ni7iw")
autoplay = "default"
frame_progress = 0.726764

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 0)
shape = SubResource("CircleShape2D_xwkdq")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_7okw3")
volume_db = -10.0
autoplay = true

[node name="Mirroring Area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mirroring Area"]
position = Vector2(8, 0)
shape = SubResource("CircleShape2D_ac2j7")

[node name="hitBox" parent="." instance=ExtResource("5_y3mio")]
position = Vector2(8, 14)
collision_layer = 8
damage = 3

[node name="CollisionShape2D" parent="hitBox" index="0"]
position = Vector2(0, -14)
shape = SubResource("CircleShape2D_fxljv")
debug_color = Color(0.864585, 0.000595089, 0.864113, 0.42)

[node name="hitBox2" parent="." instance=ExtResource("5_y3mio")]
position = Vector2(2, 6)
collision_layer = 16
canCrit = true

[node name="CollisionShape2D" parent="hitBox2" index="0"]
position = Vector2(6, -6)
shape = SubResource("CircleShape2D_n7yth")
debug_color = Color(0.266849, 0.607265, 0.510762, 0.42)

[connection signal="area_entered" from="Mirroring Area" to="." method="_on_mirroring_area_area_entered"]

[editable path="hitBox"]
[editable path="hitBox2"]
